# NexusCore

./: .gitignore  Cargo.toml  DesignDoc.md  DesignObjectives.md  Job平台_Runtime_Broker_职责边界文档.md  Job平台_业务模块统一映射说明.md  Linux_Syscall_Flavor_适配文档.md  Linux_多发行版_Syscall_实机采样计划.md  NexusCode总体架构图与部署演进文档.md  NexusCode统一数据模型与事件模型文档.md  NexusGate与NexusRuntime详细职责与交互文档.md  OJ_Backend_阶段性完成清单.md  OJ_HTTP_API_契约文档.md  OJ_性能测试与瓶颈分析.md  P0_生产稳定性与运维闭环_Runbook.md  P1_阶段收口清单.md  PRD.md  Runtime_Gateway_运维_API_契约文档.md  Runtime_WorkerGroup_与_NATS_联调文档.md  Runtime_WorkerGroup_与_RabbitMQ_联调文档.md  Rust Workspace 详细模块划分文档.md  SPJ_Validator_Runtime_阶段性进展文档.md  Syscall_基线采样报告.md  Wasm_Nsjail_性能对比.md  context.md  docker-compose.dev.yml  多Broker_平台底座_阶段性总结.md  本地依赖_DockerCompose_联调文档.md  生产部署与配置收口手册.md  统一Job_平台接口设计验收标准文档.md
.github/workflows/: runtime-matrix.yml
NexusCodeFrontend/: README.md  package-lock.json  package.json  vite.config.ts
NexusCodeFrontend/src/: App.vue
NexusCodeFrontend/src/assets/: base.css  main.css
NexusCodeFrontend/src/components/: CodeEditor.vue
NexusCodeFrontend/src/data/: mock.ts
NexusCodeFrontend/src/lib/: api.ts  markdown.ts
NexusCodeFrontend/src/router/: index.ts
NexusCodeFrontend/src/stores/: theme.ts
NexusCodeFrontend/src/views/: AdminProblemEditorView.vue  AdminProblemsView.vue  ClusterView.vue  HomeView.vue  ProblemDetailView.vue  ProblemsView.vue  SubmissionDetailView.vue  SubmissionsView.vue  SubmitView.vue
artifacts/syscall-sampling/oracle-ubuntu-arm64/: baseline_report.txt  compare_all_flavors.txt  seccomp_profiles_arch.json  seccomp_profiles_debian_ubuntu.json  seccomp_profiles_debian_ubuntu_aarch64.json  seccomp_profiles_generic.json  seccomp_profiles_rhel_like.json  uname_a.txt
crates/nexus-alert-relay/: Cargo.toml
crates/nexus-alert-relay/src/: main.rs
crates/nexus-app/: Cargo.toml
crates/nexus-app/src/: main.rs  telemetry.rs
crates/nexus-auth/: Cargo.toml
crates/nexus-auth/src/: domain.rs  lib.rs  service.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs
crates/nexus-gateway/: Cargo.toml
crates/nexus-gateway/src/: lib.rs
crates/nexus-jobs/: Cargo.toml
crates/nexus-jobs/src/: lib.rs  router.rs
crates/nexus-jobs/src/api/: mod.rs  query.rs  service.rs  traits.rs  validator.rs
crates/nexus-jobs/src/domains/: mod.rs  oj.rs
crates/nexus-jobs/src/handlers/: contract.rs  descriptor.rs  mod.rs  registry.rs
crates/nexus-jobs/src/model/: events.rs  job.rs  management.rs  mod.rs  payload.rs  result.rs  status.rs
crates/nexus-jobs/src/registry/: events.rs  memory.rs  mod.rs
crates/nexus-jobs/src/runtime/: mapper.rs  mod.rs  observer.rs  submitter.rs
crates/nexus-oj/: Cargo.toml
crates/nexus-oj/src/: application.rs  domain.rs  infrastructure.rs  language.rs  lib.rs  repository.rs
crates/nexus-runtime/: Cargo.toml
crates/nexus-runtime/src/: broker.rs  executor.rs  judge.rs  lib.rs  metrics.rs  planning.rs  protocol.rs  router.rs
crates/nexus-runtime/src/broker/: mod.rs  nats.rs  rabbitmq.rs  redis.rs
crates/nexus-runtime/tests/: nats_integration.rs  rabbitmq_integration.rs  redis_streams_integration.rs
crates/nexus-runtime/tests/support/: broker_contract.rs
crates/nexus-shared/: Cargo.toml
crates/nexus-shared/src/: error.rs  ids.rs  lib.rs  meta.rs
crates/nexus-storage/: Cargo.toml
crates/nexus-storage/src/: lib.rs  postgres.rs
env/: alerting.local.env  dev.compose.monitoring.nats.env  dev.compose.monitoring.rabbitmq.env  dev.compose.monitoring.redis_streams.env  dev.compose.nats.env  dev.compose.rabbitmq.env  dev.compose.redis_streams.env  prod.alerting.env.example  prod.base.env.example  prod.broker.nats.env.example  prod.broker.rabbitmq.env.example  prod.broker.redis_streams.env.example
migrations/: 0001_init_oj.sql  0002_init_submissions.sql  0003_easy_judge_support.sql  0004_problem_testcases_and_judge_config.sql  0005_submission_runtime_results.sql  0006_submission_case_memory_usage.sql  0007_problem_sandbox_kind.sql
monitoring/: README.md
monitoring/alert-relay/: Dockerfile
monitoring/alertmanager/: alertmanager.host.yml  alertmanager.yml
monitoring/grafana/dashboards/: nexus-runtime-broker-observability.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: nexus-runtime-alerts.yml
scripts/: bench_oj_submission.mjs  bench_wasm_vs_nsjail.mjs  check_deploy_config.sh  collect_runtime_syscall_baseline.sh  compare_runtime_seccomp_profiles.sh  query_alert_audit.py  run_broker_failure_drill.sh  run_nexus_role.sh  smoke_runtime_matrix.sh  verify_alert_pipeline.sh
