[package]
name = "nexus-app"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
nexus-config = { path = "../nexus-config" }
nexus-gateway = { path = "../nexus-gateway" }
nexus-runtime = { path = "../nexus-runtime" }
nexus-shared = { path = "../nexus-shared" }
nexus-storage = { path = "../nexus-storage" }
axum.workspace = true
redis.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
