[package]
name = "nexus-jobs"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
nexus-shared = { path = "../nexus-shared" }
nexus-runtime = { path = "../nexus-runtime" }
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
