[package]
name = "nexus-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
nexus-shared = { path = "../nexus-shared" }
axum.workspace = true
async-trait.workspace = true
async-nats.workspace = true
futures-util.workspace = true
lapin.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-executor-trait.workspace = true
tokio-reactor-trait.workspace = true
tracing.workspace = true
ulid.workspace = true
once_cell.workspace = true
prometheus.workspace = true
